@@ -224,122 +224,6 @@ TclpWideClicksToNanoseconds(
 /*
  *----------------------------------------------------------------------
  *
- * TclpGetTimeZone --
- *
- *	Determines the current timezone. The method varies wildly between
- *	different platform implementations, so its hidden in this function.
- *
- * Results:
- *	The return value is the local time zone, measured in minutes away from
- *	GMT (-ve for east, +ve for west).
- *
- * Side effects:
- *	None.
- *
- *----------------------------------------------------------------------
- */
-
-int
-TclpGetTimeZone(
-    unsigned long currentTime)
-{
-    int timeZone;
-
-    /*
-     * We prefer first to use the time zone in "struct tm" if the structure
-     * contains such a member. Following that, we try to locate the external
-     * 'timezone' variable and use its value. If both of those methods fail,
-     * we attempt to convert a known time to local time and use the difference
-     * from UTC as the local time zone. In all cases, we need to undo any
-     * Daylight Saving Time adjustment.
-     */
-
-#if defined(HAVE_TM_TZADJ)
-#define TCL_GOT_TIMEZONE
-    /*
-     * Struct tm contains tm_tzadj - that value may be used.
-     */
-
-    time_t curTime = (time_t) currentTime;
-    struct tm *timeDataPtr = TclpLocaltime(&curTime);
-
-    timeZone = timeDataPtr->tm_tzadj / 60;
-    if (timeDataPtr->tm_isdst) {
-	timeZone += 60;
-    }
-#endif
-
-#if defined(HAVE_TM_GMTOFF) && !defined (TCL_GOT_TIMEZONE)
-#define TCL_GOT_TIMEZONE
-    /*
-     * Struct tm contains tm_gmtoff - that value may be used.
-     */
-
-    time_t curTime = (time_t) currentTime;
-    struct tm *timeDataPtr = TclpLocaltime(&curTime);
-
-    timeZone = -(timeDataPtr->tm_gmtoff / 60);
-    if (timeDataPtr->tm_isdst) {
-	timeZone += 60;
-    }
-#endif
-
-#if defined(HAVE_TIMEZONE_VAR) && !defined(TCL_GOT_TIMEZONE) && !defined(USE_DELTA_FOR_TZ)
-#define TCL_GOT_TIMEZONE
-    /*
-     * The 'timezone' external var is present and may be used.
-     */
-
-    SetTZIfNecessary();
-
-    /*
-     * Note: this is not a typo in "timezone" below! See tzset documentation
-     * for details.
-     */
-
-    timeZone = timezone / 60;
-#endif
-
-#if !defined(TCL_GOT_TIMEZONE)
-#define TCL_GOT_TIMEZONE
-    /*
-     * Fallback - determine time zone with a known reference time.
-     */
-
-    time_t tt;
-    struct tm *stm;
-
-    tt = 849268800L;		/* 1996-11-29 12:00:00  GMT */
-    stm = TclpLocaltime(&tt);	/* eg 1996-11-29  6:00:00  CST6CDT */
-
-    /*
-     * The calculation below assumes a max of +12 or -12 hours from GMT.
-     */
-
-    timeZone = (12 - stm->tm_hour)*60 + (0 - stm->tm_min);
-    if (stm->tm_isdst) {
-	timeZone += 60;
-    }
-
-    /*
-     * Now have offset for our known reference time, eg +360 for CST6CDT.
-     */
-#endif
-
-#ifndef TCL_GOT_TIMEZONE
-    /*
-     * Cause fatal compile error, we don't know how to get timezone.
-     */
-
-#error autoconf did not figure out how to determine the timezone.
-#endif
-
-    return timeZone;
-}
-
-/*
- *----------------------------------------------------------------------
- *
  * Tcl_GetTime --
  *
  *	Gets the current system time in seconds and microseconds since the
